--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1716,6 +1716,9 @@
 				width: 48px;
 				height: 48px;
 			}
+			.img-circle {
+   				border-radius: 50%;
+			}
 
 		.image.fit {
 			display: block;
