--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1713,12 +1713,11 @@
 		}
 
 			.image.avatar48 img {
+				shape-outside: circle(50%)
 				width: 48px;
 				height: 48px;
 			}
-			.img-circle {
-   				border-radius: 50%;
-			}
+			
 
 		.image.fit {
 			display: block;
