--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1707,14 +1707,14 @@
 		}
 
 		.image.avatar48 {
-			shape-outside: circle(50%)
+			shape-outside: circle(50%);
 			width: 48px;
 			height: 48px;
 			background: #f00;
 		}
 
 			.image.avatar48 img {
-				shape-outside: circle(50%)
+				shape-outside: circle(50%);
 				width: 48px;
 				height: 48px;
 			}
